--- a/index.html
+++ b/index.html
@@ -61,3 +61,48 @@
     
     </div>
   </header><!-- End Header -->
+
+  <!-- ======= About Section ======= -->
+  <section id="about" class="about">
+
+    <!-- ======= About Me ======= -->
+    <div class="about-me container">
+
+      <div class="section-title">
+        <h2>About</h2>
+        <p>Learn more about me</p>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-4" data-aos="fade-right">
+          <img src="assets/img/me.jpeg" class="img-fluid" alt="">
+        </div>
+        <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
+          <h3>Undergraduate Student</h3>
+          <p class="fst-italic">
+            Hi, I'm a 3rd year CS Undergrad studying at IIIT,Bangalore.
+          </p>
+          <div class="row">
+            <div class="col-lg-6">
+              <ul>
+                <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>01 Nov 2001</span></li>
+                
+                <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Hyderabad,Telangana</span></li>
+              </ul>
+            </div>
+            <div class="col-lg-6">
+              <ul>
+                <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>21</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>iMTech</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>leelavamsikrishna.Sannipalli@iiitb.ac.in</span></li>
+              </ul>
+            </div>
+          </div>
+          <p>
+            I have high comprehension and logical reasoning skills, and I'm always curious and eager to pick up new talents. Always eager to learn more, develop, and adapt to the circumstances in order to deliver the best possible result.
+            I have a strong interest in learning about different technology, and I keep up with the news on daily basis.
+          </p>
+        </div>
+      </div>
+
+    </div><!-- End About Me -->
