--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 </div>
       
                 <div class="progress">
-                  <span class="skill">Software Development<i class="val">40%</i></span>
+                  <span class="skill">Software Development<i class="val">80%</i></span>
                   <div class="progress-bar-wrap">
                     <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
@@ -195,7 +195,7 @@
         <h2>Resume</h2>
         <p>Check My Resume</p>
         <a
-          href="https://drive.google.com/file/d/19HMSemwtaS7BnxgpVt1f0DcKEJ5ge6dI/view?usp=sharing"
+          href="https://drive.google.com/file/d/1s0cDdyy6YAXmNSJsp5WSb5Zl8zyB0OGn/view?usp=share_link"
         >
           <div class="card resume-card">
             <div class="card-header">
