--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
         <h2>Resume</h2>
         <p>Check My Resume</p>
         <a
-          href="https://drive.google.com/file/d/1s0cDdyy6YAXmNSJsp5WSb5Zl8zyB0OGn/view"
+          href="https://drive.google.com/file/d/1wgb6OcfrWVEcbKyz8aZp1JoTDCdJGZ5g/view?usp=sharing"
         >
           <div class="card resume-card">
             <div class="card-header">
