--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
         >
           <div class="card resume-card">
             <div class="card-header">
-              <img src="assets/img/resume.png" alt="resume" />
+              <img src="assets/img/IMT2020111.pdf" alt="resume" />
             </div>
             <div class = "card-body">
              <h4> Leelavamsikrishna-Resume</h4>
