--- a/index.html
+++ b/index.html
@@ -199,10 +199,10 @@
         >
           <div class="card resume-card">
             <div class="card-header">
-              <img src="assets/img/IMT2020111.pdf" alt="resume" />
+              <img src="assets/img/resumepic.jpg" alt="resume" />
             </div>
             <div class = "card-body">
-             <h4> Leelavamsikrishna-Resume</h4>
+             <h4> Leelavamsikrishna- Resume</h4>
             </div>
           </div>
         </a>
